fix: zooming on ios touch devices

--- a/index.css
+++ b/index.css
@@ -1,3 +1,21 @@
+html,
+body {
+  -webkit-tap-highlight-color: transparent;
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#app {
+
+  position: fixed;
+  inset: 0;
+
+  width: 100%;
+  height: 100%;
+}
+
 .global-gui {
   z-index: 999 !important;
 }
